--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ repositories {
 }
 
 dependencies {
-	dependencies {
+
 		implementation 'com.h2database:h2'
 		runtimeOnly 'com.mysql:mysql-connector-j'
 
@@ -35,6 +35,8 @@ dependencies {
 		implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 		implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+		implementation 'org.hibernate.orm:hibernate-spatial:6.6.22.Final'
+		implementation 'org.locationtech.jts:jts-core:1.18.2'
 
 		compileOnly 'org.projectlombok:lombok'
 		annotationProcessor 'org.projectlombok:lombok'
@@ -48,7 +50,7 @@ dependencies {
 		implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
 		runtimeOnly   'io.jsonwebtoken:jjwt-impl:0.12.5'
 		runtimeOnly   'io.jsonwebtoken:jjwt-jackson:0.12.5'
-	}
+
 
 
 
